ec2.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: AWS CloudFormation VPC Template
Parameters:
  VpcCIDR:
    Type: String
    Default: 10.0.0.0/16
    Description: CIDR block for the VPC
  PublicSubnetCIDR:
    Type: String
    Default: 10.0.0.0/24    
    Description: CIDR block for the public subnet
  PrivateSubnetCIDR:
    Type: String
    Default: 10.0.0.1/24
    Description: CIDR block for the private subnet
  ec2InstanceType:
    Type: String
    Default: t3.micro
    Description: EC2 instance type  
  imageId:
    Type: AWS::EC2::Image::Id
    Description: AMI ID for the EC2 instance
    Default: ami-01a00762f46d584a1

 
Resources:
  MyKeyPair:
    Type: AWS::EC2::KeyPair
    Properties:
      KeyName: MyKeyPair
  routeTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVPC
      Tags:
        - Key: Name
          Value: MyRouteTable
  publicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref routeTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  subnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref routeTable   
  MyVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: MyVPC

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: !Ref PublicSubnetCIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: PublicSubnet

  PrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: !Ref PrivateSubnetCIDR
      Tags:
        - Key: Name
          Value: PrivateSubnet

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: MyInternetGateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref InternetGateway
  newsg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH and HTTP access
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0 
        - IpProtocol: tcp
          FromPort: 5000  
          ToPort: 5000
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: WebServerSecurityGroup
  firstec2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref ec2InstanceType
      ImageId: !Ref imageId
      SecurityGroupIds:
        - !Ref newsg
      SubnetId: !Ref PublicSubnet
      KeyName: !Ref MyKeyPair
      Tags:
        - Key: Name
          Value: FirstEC2Instance
  secondec2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref ec2InstanceType
      ImageId: !Ref imageId
      SecurityGroupIds:
        - !Ref newsg
      SubnetId: !Ref PrivateSubnet
      KeyName: !Ref MyKeyPair
      Tags:
        - Key: Name
          Value: SecondEC2Instance
